--- a/index.html
+++ b/index.html
@@ -7,9 +7,35 @@
   <link rel="icon" type="image/png" href="#" />
      <!-- <p>https://www.peachpit.com/articles/article.aspx?p=2239154&seqNum=10</p> -->
   <style>
-  img {
-    width: 25%;
+
+  body{
+    font-family: American Typewriter;
+    padding-top: 10vh;
   }
+
+  img {
+    width: 25vw;
+  }
+
+  div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  p{
+    text-align: left;
+    width: 25vw;
+    margin-top: 5px;
+  }
+
+  #next{
+    position: fixed;
+    left:48.5%;
+    bottom: 200px;
+  }
+
+
   </style>
 </head>
 
@@ -19,6 +45,29 @@
   </div>
   <div>
     <p id="captionContainer"></p>
+  </div>
+  <div id=next>
+    <a href="">
+    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 width="50px" height="50px" viewBox="0 0 2089.3 1560.49"
+	 style="overflow:visible;enable-background:new 0 0 2089.3 1560.49;" xml:space="preserve">
+<defs>
+</defs>
+<path d="M1363.04,1511.53c2.19-32.96,6.59-65.69,13.16-97.79c9.56-46.71,23.82-92.66,42.39-136.56
+	c18.24-43.12,40.81-84.71,67.1-123.62c26.05-38.55,55.96-74.81,88.91-107.76c32.95-32.95,69.21-62.87,107.76-88.91
+	c38.91-26.29,80.5-48.86,123.62-67.1c43.9-18.57,89.85-32.83,136.56-42.39c31.61-6.47,63.83-10.83,96.28-13.06
+	c28.42-1.95,50.47-25.59,50.47-54.08l0,0c0-28.49-22.05-52.13-50.47-54.08c-32.45-2.23-64.67-6.59-96.28-13.06
+	c-46.71-9.56-92.66-23.82-136.56-42.39c-43.12-18.24-84.71-40.81-123.62-67.1c-38.55-26.05-74.81-55.96-107.76-88.91
+	c-32.95-32.95-62.87-69.21-88.91-107.76c-26.29-38.91-48.86-80.5-67.1-123.62c-18.57-43.9-32.83-89.85-42.39-136.56
+	c-6.57-32.1-10.97-64.83-13.16-97.79C1361.21,21.42,1338.39,0,1310.8,0h0c-30.25,0-54.25,25.57-52.24,55.75
+	c2.5,37.73,7.54,75.22,15.07,111.99c10.94,53.48,27.27,106.09,48.54,156.36c20.87,49.35,46.7,96.94,76.77,141.45
+	c29.78,44.08,63.97,85.52,101.64,123.19c37.66,37.66,79.11,71.86,123.19,101.64c19.8,13.38,40.21,25.91,61.11,37.55H52.35
+	C23.44,727.92,0,751.36,0,780.28l0,0c0,28.91,23.44,52.35,52.35,52.35h1632.4c-20.86,11.62-41.24,24.13-61,37.49
+	c-44.08,29.78-85.52,63.97-123.19,101.64c-37.66,37.66-71.86,79.11-101.64,123.19c-30.07,44.51-55.9,92.1-76.77,141.45
+	c-21.26,50.27-37.59,102.88-48.54,156.36c-7.53,36.77-12.56,74.26-15.07,111.99c-2,30.18,21.99,55.75,52.24,55.75h0
+	C1338.39,1560.49,1361.21,1539.07,1363.04,1511.53z"/>
+</svg>
+</a>
   </div>
   <script>
     const imageContainer = document.querySelector('#imageContainer');
@@ -33,7 +82,7 @@
       imageContainer.src = images[randomImageIndex];
       captionContainer.innerHTML = caption[randomCaptionIndex];
     }
-    
+
     window.addEventListener('load',setRandomImage);
   </script>
 </body>
