--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>TBD</title>
-  <link rel="icon" type="image/png" href="#" />
-     <!-- <p>https://www.peachpit.com/articles/article.aspx?p=2239154&seqNum=10</p> -->
+  <title>Pairs</title>
+  <link rel="icon" type="image/png" href="favicon.png" />
   <style>
 
   body{
